# ferralloc

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: codspeed.yml
crates/ferralloc-bench/: Cargo.toml  README.md
crates/ferralloc-bench/benches/: explicit.rs  global_ferralloc.rs  global_jemalloc.rs  threaded.rs
crates/ferralloc-bench/benches/common/: mod.rs
crates/ferralloc-bench/src/: allocation.rs  allocator_target.rs  global_workload.rs  rng.rs  rss.rs  threaded.rs  workload.rs
crates/ferralloc-core/src/: allocator.rs  extent_table.rs  heap.rs  lib.rs  page_map.rs  run_table.rs  table_capacity.rs
crates/runic/: AGENTS.md  Cargo.toml  README.md
crates/runic-bench/: AGENTS.md  Cargo.toml  README.md
crates/runic-bench/benches/: AGENTS.md  README.md  explicit.rs  global_mimalloc.rs  global_runic.rs  global_snmalloc.rs  global_system.rs  threaded.rs
crates/runic-bench/src/: AGENTS.md  README.md  allocator_target.rs  lib.rs
crates/runic-core/: AGENTS.md  Cargo.toml  README.md
crates/runic-core/src/: AGENTS.md  README.md  allocator.rs  config.rs  extent.rs  extent_mapping_cache.rs  extent_table.rs  free_list.rs  heap.rs  heap_config.rs  layout.rs  lib.rs  os_memory.rs  page_map.rs  run.rs  run_table.rs  size_class.rs  slot_store.rs
crates/runic-core/tests/: AGENTS.md  README.md  manual_alloc.rs
crates/runic-test-support/: AGENTS.md  Cargo.toml  README.md
docs/: allocator-hardening-policy.md  remote-free-protocol.md  small-allocation-cache.md  span-ownership-evaluation.md  thread-local-frontend-scope.md  thread-local-heap-plan.md
(+47 files in other folders)
