[package]
name = "ferralloc-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ferralloc = { path = "../ferralloc" }
mimalloc = "0.1"
snmalloc-rs = "0.3"
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "explicit"
harness = false

[[bench]]
name = "threaded"
harness = false

[[bench]]
name = "global_system"
harness = false

[[bench]]
name = "global_ferralloc"
harness = false

[[bench]]
name = "global_mimalloc"
harness = false

[[bench]]
name = "global_jemalloc"
harness = false

[[bench]]
name = "global_snmalloc"
harness = false
